# db_mac_secoge

./: .gitignore  README.md  pyproject.toml
data_bruto/ATBasica/: Consulta Puerperal 2023 a 2024_31_05.xlsx  Quantitativo de Gestantes Acompanhadas.xlsx
data_bruto/Atende_Gestante/: Atende Gestante - Registro de Atendimentos.xlsx  Atende_Gestante_Registro_Teleatendimento.csv  Atende_Gestante_Registro_Teleatendimento.xlsx
data_bruto/Mae_Coruja/: DADOS MULHER.xlsx  Listagem_Espacos_PMCR_endereco_bairros_cobertos.xlsx  consolidado_kits_pmcr.xlsx
data_bruto/SAP/: MatrizGAH_GGAI_SECOGE.xlsx  ofertas_por_unidade.csv  tab_DS.xlsx
data_bruto/horus/: Dispensação_Medicamentos_Saude_Mulher_-_CAF_para_Unidades.xlsx
data_bruto/ouvidoria/: Banco_de_Dados_Ouvidoria_do_SUS_Recife _2019_ate _o_dia_03_06_2024.xlsx
data_bruto/producao/: REDE_SAUDE_RECIFE_GEO.xlsx  dCBO.xlsx  dFormaOrganiz.xlsx  dPort157.xlsx  fProfissionais.xlsx
modelagem/: MODELAGEM.md
scripts/: main.py  main_02.py  sql_unidades_mac
scripts_main/: main.py
scripts_sql/: create_calendario.sql  create_unidades_mac.sql  rel_atbasica.sql  rel_atende_gestante.sql  rel_horus.sql  rel_mae_coruja.sql  rel_maternidades.sql  rel_ouvidoria.sql  rel_producao.sql  rel_unidades_mac.sql  rel_unidades_mac_distritos.sql
scripts_sql/relacionamentos_por_schemas/: rel_atbasica.sql  (+10 more)
src/: __init__.py  data_processing.py  database.py  excel_operations.py  mae_coruja_processing.py  spa_processing.py  unidades_mac.py
tests/: drop_schemas.sql  pk_dinamica.py  test_create_schema.py  teste_locale.py  teste_planilha_com_erro.py
(+30 files in other folders)
