[tool.poetry]
name = "db-mac-secoge"
version = "0.1.0"
description = ""
authors = ["Ravi Pellizzi <r.pellizzi09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
unidecode = "^1.3.8"
openpyxl = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
